# FmodCmake

./: .gitignore  CMakeLists.txt  readme.md
assets/soundbanks/Desktop/: Master.bank  Master.strings.bank  Music.bank
config/: audio_engine.ini
libs/: CMakeLists.txt
libs/fmod/: CMakeLists.txt  readme.md
libs/fmod/core/: readme.md
libs/fmod/plugins/: readme.md
libs/fmod/studio/: readme.md
libs/raylib/: CMakeLists.txt
src/audio/: audio_config.h  audio_engine.cpp  audio_engine.h
src/core/: game.cpp  game.h
